# wasmedge-nodejs-starter

./: .gitignore  Cargo.toml  Dockerfile  HerokuDockerfile  README-Codespaces.md  README.md  app.json  heroku.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: Cargo.toml  Dockerfile  README.md
.github/.github/workflows/: nodejs.yml
.github/node/: app.js
.github/node/public/: index.html
.github/src/: lib.rs
.github/workflows/: core.yml  docker.yml  ext.yml  nodejs.yml
node/: app.js  package.json  test.js
node/public/: index.html
src/: lib.rs
